--- a/ex.html
+++ b/ex.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <ul>
-    <li class="c">test</li>
+    <li class="c">テスト</li>
     <li class="c">exmle</li>
     <li class="c">e.g</li>
 </ul>
